rename ADDRESS to POSTAL_ADDRESS (#231)
